--- a/src/app/shared/components/collapsable-filters/collapsable-filters.component.html
+++ b/src/app/shared/components/collapsable-filters/collapsable-filters.component.html
@@ -1,11 +1,17 @@
-<div *ngFor="let filter of filtersOptions">
-    <p class="ft-title"><b>{{ filter.title }}</b></p>
-    <ng-container *ngFor="let optionLevel1 of filter.options">
-        <p class="ft-medium" (click)="selectOption(optionLevel1)">{{ optionLevel1.text }}</p>
-        <p class="ft-label"
-            *ngFor="let optionLevel2 of optionLevel1.options"
-            (click)="selectOption(optionLevel2)">
-            {{ optionLevel2.text }}
+<div *ngFor="let filter of _filters">
+    <p class="ft-medium"><b>{{ filter.name }}</b></p>
+    <div class="flex" *ngFor="let option of filter.options">
+        <p class="ft-body"
+            [ngClass]="{'bg-primary-container': option.value === filter.currentOption?.value}"
+            (click)="selectOption(filter, option)">
+            {{ option.text }}
         </p>
-    </ng-container>
+        <button class="button-style-none" *ngIf="option.value === filter.currentOption?.value" (click)="selectOption(filter, option, true)">
+            <svg class="txt-primary" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M18 6l-12 12"></path>
+                <path d="M6 6l12 12"></path>
+             </svg>
+        </button>
+    </div>
 </div>
