--- a/src/app/shared/components/collapsable-filters/collapsable-filters.component.html
+++ b/src/app/shared/components/collapsable-filters/collapsable-filters.component.html
@@ -1,13 +1,13 @@
 <div *ngFor="let filter of _filters">
-    <p class="ft-medium"><b>{{ filter.name }}</b></p>
+    <p class="ft-body"><b>{{ filter.name }}</b></p>
     <div class="flex" *ngFor="let option of filter.options">
-        <p class="ft-body"
+        <p class="ft-label"
             [ngClass]="{'bg-primary-container': option.value === filter.currentOption?.value}"
             (click)="selectOption(filter, option)">
             {{ option.text }}
         </p>
         <button class="button-style-none" *ngIf="option.value === filter.currentOption?.value" (click)="selectOption(filter, option, true)">
-            <svg class="txt-primary" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <svg class="txt-primary" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                 <path d="M18 6l-12 12"></path>
                 <path d="M6 6l12 12"></path>
