--- a/src/assets/styles/material/_overloads.scss
+++ b/src/assets/styles/material/_overloads.scss
@@ -44,6 +44,12 @@
 //     opacity: .9;
 // }
 
+// Material icon buttons
+.mat-menu-item i-tabler {
+    margin-right: 16px;
+    vertical-align: middle;
+}
+
 // Material dialogs
 .mat-dialog-container {
     border-radius: 15px !important;
