--- a/src/assets/styles/material/_overloads.scss
+++ b/src/assets/styles/material/_overloads.scss
@@ -1,25 +1,25 @@
 // // ngx-mat-select-search tablet and mobile fix
-// @media (max-width: calc(48rem - 1px)) {
-//     .mat-select-search-input {
-//         padding: 0 0 0 16px !important;
-//     }
-//     .mat-select-search-inner {
-//         width: 100%;
-//     }
-//     .mat-select-panel {
-//         max-width: 80vw !important;
-//     }
-// }
+@media (max-width: calc(48rem - 1px)) {
+    .mat-select-search-input {
+        padding: 0 0 0 16px !important;
+    }
+    .mat-select-search-inner {
+        width: 100%;
+    }
+    .mat-select-panel {
+        max-width: 80vw !important;
+    }
+}
 
-// @media (max-height: 32rem) and (max-width: calc(64rem - 1px)) {
-//     .cdk-overlay-pane {
-//         position: static;
-//     }
-//     .cdk-overlay-connected-position-bounding-box {
-//         align-items: center;
-//         justify-content: space-around;
-//     }
-// }
+@media (max-height: 32rem) and (max-width: calc(64rem - 1px)) {
+    .cdk-overlay-pane {
+        position: static;
+    }
+    .cdk-overlay-connected-position-bounding-box {
+        align-items: center;
+        justify-content: space-around;
+    }
+}
 
 // // Material icons
 // .small-icon.mat-icon {
