--- a/src/app/shared/components/rounded-select/rounded-select.component.html
+++ b/src/app/shared/components/rounded-select/rounded-select.component.html
@@ -1,19 +1,26 @@
+<button (click)="toggleSelect(matSelect)" aria-hidden="true" matRipple>
+  <span>{{ control.value?.text ?? label }}</span>
+  <!-- <mat-icon>expand_more</mat-icon> TODO -->
+</button>
+
 <mat-form-field class="hidden-select">
-  <mat-label>{{ textValue ?? baseText }}</mat-label>
-  <mat-select [formControl]="control!" disableOptionCentering panelClass="rounded-select-panel" #custom_select>
-    <mat-option *ngIf="searchInput">
-      <ngx-mat-select-search [disableInitialFocus]="true" [formControl]="search"
+  <mat-label>{{ control.value?.text ?? label }}</mat-label>
+  <mat-select [formControl]="control" disableOptionCentering panelClass="rounded-select-panel" #matSelect>
+    <mat-option *ngIf="search">
+      <ngx-mat-select-search [disableInitialFocus]="true" [formControl]="searchCtrl"
         placeholderLabel="{{ searchPlaceholder }}" [searching]="loading"
         noEntriesFoundLabel="No se encontraron resultados">
       </ngx-mat-select-search>
     </mat-option>
 
-    <mat-option *ngIf="!!control!.value && resetButton" [value]="null">Borrar</mat-option>
-    <mat-divider *ngIf="!!control!.value && resetButton"></mat-divider>
+    <ng-container *ngIf="control!.value && resetOption && !loading">
+      <mat-option [value]="undefined">Borrar</mat-option>
+      <mat-divider></mat-divider>
+    </ng-container>
 
     <ng-container *ngIf="!hasGroups">
       <mat-option [value]="option" *ngFor="let option of filteredOptions">
-        {{ option.text}}
+        {{ option.text }}
       </mat-option>
     </ng-container>
 
@@ -27,8 +34,3 @@
     </ng-container>
   </mat-select>
 </mat-form-field>
-
-<button class="rounded-button" [disabled]="disabled" (click)="toggleSelect(custom_select)" aria-hidden="true" matRipple>
-  <span>{{ textValue ?? baseText }}</span>
-  <mat-icon>expand_more</mat-icon>
-</button>
