--- a/src/app/shared/components/rounded-select/rounded-select.component.html
+++ b/src/app/shared/components/rounded-select/rounded-select.component.html
@@ -5,7 +5,7 @@
 
 <mat-form-field class="hidden-select">
   <mat-label>{{ control.value?.text ?? label }}</mat-label>
-  <mat-select [formControl]="control" disableOptionCentering panelClass="rounded-select-panel" #matSelect>
+  <mat-select [formControl]="control" disableOptionCentering panelClass="rounded-select-panel" [compareWith]="compareValues" #matSelect>
     <mat-option *ngIf="search">
       <ngx-mat-select-search [disableInitialFocus]="true" [formControl]="searchCtrl"
         placeholderLabel="{{ searchPlaceholder }}" [searching]="loading"
@@ -14,7 +14,7 @@
     </mat-option>
 
     <ng-container *ngIf="control!.value && resetOption && !loading">
-      <mat-option [value]="undefined">Borrar</mat-option>
+      <mat-option [value]="undefined">Remover filtro</mat-option>
       <mat-divider></mat-divider>
     </ng-container>
 
