--- a/src/app/pages/posts/pages/posts-list/posts-list.component.html
+++ b/src/app/pages/posts/pages/posts-list/posts-list.component.html
@@ -5,6 +5,10 @@
         (filtersChange)="changeFilters($event)"
     ></app-posts-filters>
     <div>
+        <app-post-filter-tags
+            [filters]="optionsLoading ? undefined : filters"
+            (filtersChange)="changeFilters($event)"
+        ></app-post-filter-tags>
         <app-paginated-filter-status
             [pageResults]="posts"
             [filters]="filters"
