--- a/src/app/pages/posts/pages/posts-list/posts-list.component.html
+++ b/src/app/pages/posts/pages/posts-list/posts-list.component.html
@@ -1,32 +1,37 @@
-<main class="container">
-    <app-posts-filters
+<main class="container flex-col gap-1 bg-background">
+    <!-- <app-posts-filters
         [filters]="filters"
         [options]="options"
         (filtersChange)="changeFilters($event)"
-    ></app-posts-filters>
-    <div>
-        <app-post-filter-tags
-            [filters]="optionsLoading ? undefined : filters"
-            (filtersChange)="changeFilters($event)"
-        ></app-post-filter-tags>
+    ></app-posts-filters> -->
+    <div
+        class="gap-1 flex-wrap"
+        [ngClass]="{
+            'flex-between-center flex-row-reverse': (mobile$|async)===false,
+            'flex-col flex-center-end': mobile$|async
+        }">
         <app-paginated-filter-status
             [pageResults]="posts"
             [filters]="filters"
             [loading]="loading"
             (changePage)="changePage($event)">
         </app-paginated-filter-status>
-
-        <section>
-            <p *ngIf="loading">Cargando...</p>
-            <ul class="ul-style-none" *ngIf="!loading">
-                <li *ngFor="let post of posts?.results">
-                    <app-post-card
-                        [post]="post"
-                        [ownPost]="post.user.id === authUser?.id"
-                        [loading]="loading"
-                    ></app-post-card>
-                </li>
-            </ul>
-        </section>
+        <app-post-filter-tags
+            [filters]="optionsLoading ? undefined : filters"
+            (filtersChange)="changeFilters($event)"
+        ></app-post-filter-tags>
     </div>
+
+    <section>
+        <p *ngIf="loading">Cargando...</p>
+        <ul class="ul-style-none" *ngIf="!loading">
+            <li *ngFor="let post of posts?.results">
+                <app-post-card
+                    [post]="post"
+                    [ownPost]="post.user.id === authUser?.id"
+                    [loading]="loading"
+                ></app-post-card>
+            </li>
+        </ul>
+    </section>
 </main>
