--- a/src/assets/styles/material/_overloads.scss
+++ b/src/assets/styles/material/_overloads.scss
@@ -62,3 +62,9 @@
     backdrop-filter: blur(20px);
     color: var(--clr-on-background);
 }
+
+// Icons
+i-tabler.small-icon {
+    width: 16px;
+    height: 16px;
+}
