feat(post-list): Add post list styles and fix buttons

--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -93,7 +93,7 @@
       <mat-divider class="w-100"></mat-divider>
     </div>
 
-    <div class="flex-col gap-1">
+    <div class="flex-col gap-1 w-100">
       <button appLoadingButton [loading]="loadingGoogle"
         class="rounded-button shadow-md w-100 bg-primary-container txt-on-primary-container"
         (click)="loginWithGoogle()">
