--- a/src/app/shared/components/paginated-filter-status/paginated-filter-status.component.html
+++ b/src/app/shared/components/paginated-filter-status/paginated-filter-status.component.html
@@ -1,17 +1,17 @@
-<div>
-    <span class="ft-label" *ngIf="!loading && pageResults?.count">
+<div class="f-weight-500 ft-label">
+    <span *ngIf="!loading && pageResults?.count">
         {{ pageResults?.count + (pageResults?.count === 1 ? ' resultado' : ' resultados') }}
     </span>
-    <span class="ft-label" *ngIf="!loading && !pageResults?.count">
+    <span *ngIf="!loading && !pageResults?.count">
         Sin resultados
     </span>
 </div>
 
 <div class="flex-center-center gap-05">
-    <button class="ft-label circle-button bg-primary txt-on-primary" [disabled]="!pageResults?.previous || loading" (click)="previousPage()">
+    <button class="ft-label f-weight-500 circle-button bg-primary txt-on-primary" [disabled]="!pageResults?.previous || loading" (click)="previousPage()">
         <i-tabler class="small-icon" name="chevron-left"></i-tabler>
     </button>
-    <button class="ft-label rounded-button bg-primary txt-on-primary" [matMenuTriggerFor]="pagesMenu" aria-label="Seleccionar Pág."
+    <button class="ft-label f-weight-500 rounded-button bg-primary txt-on-primary" [matMenuTriggerFor]="pagesMenu" aria-label="Seleccionar Pág."
         matRipple [disabled]="loading || !pageResults?.count || pageResults?.count === 1">
         <span>{{ filters?.page ?? 1 }}</span>
     </button>
@@ -20,7 +20,7 @@
             {{ page }}
         </button>
     </mat-menu>
-    <button matRipple class="ft-label circle-button bg-primary txt-on-primary" [disabled]="!pageResults?.next || loading" (click)="nextPage()">
+    <button matRipple class="ft-label f-weight-500 circle-button bg-primary txt-on-primary" [disabled]="!pageResults?.next || loading" (click)="nextPage()">
         <i-tabler class="small-icon" name="chevron-right"></i-tabler>
     </button>
 </div>
