--- a/src/app/pages/posts/pages/posts-list/posts-list.component.scss
+++ b/src/app/pages/posts/pages/posts-list/posts-list.component.scss
@@ -3,6 +3,15 @@
     grid-template-columns: 1fr;
 }
 
+app-posts-filters {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 10;
+    width: 100%;
+    height: min-content;
+}
+
 @media (min-width: 64rem) {
     .posts-grid {
         grid-template-columns: 1fr 1fr;
@@ -14,5 +23,10 @@
         app-post-card {
             width: 100%;
         }
+    }
+
+    app-posts-filters {
+        position: static;
+        z-index: 1;
     }
 }
