--- a/src/app/pages/posts/components/post-card/post-card.component.html
+++ b/src/app/pages/posts/components/post-card/post-card.component.html
@@ -41,9 +41,9 @@
   </div>
 
   <div class="ft-label flex-center-center flex-wrap gap-05">
-    <span class="rounded-tag--slime bg-primary txt-on-primary flex-grow-1">{{ post.academicLevel.name }}</span>
-    <span class="rounded-tag--slime bg-primary txt-on-primary flex-grow-1">{{ post.axis.name }}</span>
-    <span class="rounded-tag--slime bg-primary txt-on-primary flex-grow-1">{{ post.axis.subject.name }}</span>
+    <span class="rounded-tag--slime bg-academic-level txt-on-academic-level flex-grow-1">{{ post.academicLevel.name }}</span>
+    <span class="rounded-tag--slime bg-axis txt-on-axis flex-grow-1">{{ post.axis.name }}</span>
+    <span class="rounded-tag--slime bg-subject txt-on-subject flex-grow-1">{{ post.axis.subject.name }}</span>
   </div>
 
   <div class="ft-label flex-between-center f-weight-500">
